Changed Base64 encoding due to java 9 changes